--- a/portal.html
+++ b/portal.html
@@ -149,6 +149,8 @@
     <h1>Explore the Future of Digital Space</h1>
     </selection>
 
+  <div class="typing">WELCOME, ENJOY</div>
+ 
   <nav>
     <a href="#websites">WEBSITES</a>
     <a href="#movies">MOVIES</a>
@@ -167,13 +169,13 @@
     <a href="https://wa.link/v4zelx" target="_blank">
       <img src="https://raw.githubusercontent.com/shizothetechie/database/main/icon/WhatsApp.png" alt="WhatsApp" style="width: 10%;">
     </a>
-    <a href="https://www.instagram.com/gabriel.te.ch/profilecard/?igsh=MWQ3ZW9iYjQ5c3Zqdg==" target="_blank">
+    <a href="https://www.instagram.com/gabriel.te.ch" target="_blank">
       <img src="https://raw.githubusercontent.com/shizothetechie/database/main/icon/Instagram.png" alt="Instagram" style="width: 11%;">
     </a>
-    <a href="https://www.facebook.com/profile.php?id=100055490090211" target="_blank">
+    <a href="https://www.facebook.com/profile.php?id=61553116030161" target="_blank">
       <img src="https://raw.githubusercontent.com/shizothetechie/database/main/icon/Facebook.png" alt="Facebook" style="width: 12%;">
     </a>
-    <a href="https://x.com/silva_african" target="_blank">
+    <a href="https://x.com/Gabrielanangwe" target="_blank">
       <img src="https://raw.githubusercontent.com/shizothetechie/database/main/icon/twitter.png" alt="Twitter/X" style="width: 10%;">
     </a>
   </div>
@@ -278,13 +280,13 @@
     <a href="https://wa.link/v4zelx" target="_blank">
       <img src="https://raw.githubusercontent.com/shizothetechie/database/main/icon/WhatsApp.png" alt="WhatsApp" style="width: 10%;">
     </a>
-    <a href="https://instagram.com/_its.silva" target="_blank">
+    <a href="https://instagram.com/gabriel.te.ch" target="_blank">
       <img src="https://raw.githubusercontent.com/shizothetechie/database/main/icon/Instagram.png" alt="Instagram" style="width: 11%;">
     </a>
-    <a href="https://www.facebook.com/profile.php?id=100055490090211" target="_blank">
+    <a href="https://www.facebook.com/profile.php?id=61553116030161" target="_blank">
       <img src="https://raw.githubusercontent.com/shizothetechie/database/main/icon/Facebook.png" alt="Facebook" style="width: 12%;">
     </a>
-    <a href="https://x.com/silva_african" target="_blank">
+    <a href="https://x.com/Gabrielanangwe" target="_blank">
       <img src="https://raw.githubusercontent.com/shizothetechie/database/main/icon/twitter.png" alt="Twitter/X" style="width: 10%;">
     </a>
   </div>
@@ -429,4 +431,4 @@
   </footer>
   
 </body>
-</html>
+      </html>
